[package]
name = "rcore-fs-dfs"
version = "0.1.0"
authors = ["Nick Cao <nickcao@nichi.co>"]
edition = "2021"

[dependencies]
rcore-fs = { path = "../rcore-fs", features = ["std"] }
rcore-fs-fuse = { path = "../rcore-fs-fuse", features = ["use_fuse"] }
rcore-fs-ramfs = { path = "../rcore-fs-ramfs" }
nix = "0.23"
log = "0.4"
structopt = "0.3"
fuse = "0.3"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
