[package]
name = "rcore-fs-dfs"
version = "0.1.0"
authors = ["Nick Cao <nickcao@nichi.co>"]
edition = "2021"

[dependencies]
rcore-fs = { path = "../rcore-fs" }
rcore-fs-fuse = { path = "../rcore-fs-fuse", features = ["use_fuse"], optional = true }
rcore-fs-ramfs = { path = "../rcore-fs-ramfs", optional = true }
nix = { version = "0.23", optional = true }
log = "0.4"
structopt = { version = "0.3", optional = true }
fuse = { version = "0.3", optional = true }
bincode = "1.0"
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
rand = { version = "0.8.5", optional = true }
lock = { git = "https://github.com/DeathWish5/kernel-sync", rev = "8486b8" }

[features]
std = [ "rcore-fs-fuse", "rcore-fs-ramfs", "nix", "structopt", "fuse", "rand" ]
